--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
                 </form>
             </div>
             <br>
-            <a href="/search">See the map</a>
+            <a href="/search/">See the map</a>
         </div>
     </div>
 </body>
