--- a/app/templates/dash_profile.html
+++ b/app/templates/dash_profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <div id="formus">
-        <form action="." method="post">
+        <form action="." method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <h4 class="form-title">Edit Profile</h4>
             <div class="form-group">
@@ -28,6 +28,10 @@
             <div class="form-group">
                 {{ form.company_name.label_tag }}
                 {{ form.company_name }}
+            </div>
+            <div class="form-group">
+                {{ form.image.label_tag }}
+                {{ form.image }}
             </div>
             <div class="form-group">
                 {{ form.contact_email.label_tag }}
